added product pages and styles

--- a/about.html
+++ b/about.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link rel="stylesheet" href="css/styles.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
   <div class="sticky-top">
@@ -55,7 +54,7 @@
             </div>
             <div class="feature-content">
               <h3 class="feature-title h5">Specializacija</h3>
-              <p>Specializirani smo za espreso kavne aparate, mline za kavo, mehčalce vode, pomivalne stroje in ledomate.</p>
+              <p>Specializirani smo za <strong>espresso kavne aparate</strong>, mline za kavo, mehčalce vode, pomivalne stroje in ledomate. Nudimo celovite rešitve za vaše potrebe po kavi.</p>
             </div>
           </div>
         </div>
@@ -66,7 +65,7 @@
             </div>
             <div class="feature-content">
               <h3 class="feature-title h5">Vzdrževanje</h3>
-              <p>Nudimo montaže in vzdrževanje točilne tehnike (šankomatov), alkoholnih in brezalkoholnih pijač, pivskih in vinskih sistemov ter sistemov za žgane pijače.</p>
+              <p>Nudimo montaže in <strong>vzdrževanje točilne tehnike</strong> (šankomatov), sistemov za alkoholne in brezalkoholne pijače, pivskih in vinskih sistemov ter sistemov za žgane pijače.</p>
             </div>
           </div>
         </div>
@@ -77,7 +76,7 @@
             </div>
             <div class="feature-content">
               <h3 class="feature-title h5">Partnerstvo</h3>
-              <p>Naš interes je dolgoročno partnerstvo in sodelovanje. Ponujamo rešitve po meri in v vaše zadovoljstvo.</p>
+              <p>Naš interes je dolgoročno partnerstvo in sodelovanje. <strong>Ponujamo rešitve po meri</strong> in v vaše zadovoljstvo, da skupaj dosežemo uspeh.</p>
             </div>
           </div>
         </div>
@@ -88,7 +87,7 @@
             </div>
             <div class="feature-content">
               <h3 class="feature-title h5">Hitra Popravila</h3>
-              <p>Popravila izvajamo tako pri vas kot v naši delavnici. Naš odzivni čas je hiter.</p>
+              <p>Popravila izvajamo tako pri vas kot v naši delavnici. <strong>Naš odzivni čas je hiter</strong>, kar zagotavlja minimalne motnje v vašem poslovanju.</p>
             </div>
           </div>
         </div>
@@ -96,30 +95,30 @@
       <div class="row my-5 justify-content-center">
         <div class="col-lg-12 text-center">
           <h2 class="about-subtitle h3 mb-4">Prodaja Nove in Rabljene Gostinske Opreme</h2>
-          <p>Profesionalna čistilna sredstva in oprema za objektno higieno in nego perila:</p>
+          <p>Ponujamo profesionalna čistilna sredstva in opremo za objektno higieno in nego perila, vključno z:</p>
         </div>
         <div class="col-lg-4 mb-4">
           <div class="service-box text-center p-4">
             <h4 class="service-title h5"><i class="fas fa-soap mr-2"></i>Profesionalna čistila</h4>
-            <p>Vrhunska čistilna sredstva za vse vrste površin.</p>
+            <p><strong>Vrhunska čistilna sredstva</strong> za vse vrste površin, ki zagotavljajo izjemno čistočo in higieno.</p>
           </div>
         </div>
         <div class="col-lg-4 mb-4">
           <div class="service-box text-center p-4">
             <h4 class="service-title h5"><i class="fas fa-cart-arrow-down mr-2"></i>Vozički in pripomočki</h4>
-            <p>Kvalitetni vozički in pripomočki za učinkovito čiščenje.</p>
+            <p><strong>Kvalitetni vozički</strong> in pripomočki za učinkovito in enostavno čiščenje vaših prostorov.</p>
           </div>
         </div>
         <div class="col-lg-4 mb-4">
           <div class="service-box text-center p-4">
             <h4 class="service-title h5"><i class="fas fa-wind mr-2"></i>Čiščenje stekla</h4>
-            <p>Profesionalni pripomočki za čiščenje steklenih površin.</p>
+            <p>Profesionalni pripomočki za <strong>čiščenje steklenih površin</strong>, ki zagotavljajo brezhiben sijaj.</p>
           </div>
         </div>
         <div class="col-lg-4 mb-4">
           <div class="service-box text-center p-4">
             <h4 class="service-title h5"><i class="fas fa-scroll mr-2"></i>Papir in podajalniki</h4>
-            <p>Različne vrste papirjev in podajalnikov za higieno.</p>
+            <p>Različne vrste papirjev in podajalnikov za higieno, ki omogočajo <strong>učinkovito in priročno uporabo</strong>.</p>
           </div>
         </div>
       </div>
@@ -133,8 +132,7 @@
       </div>
     </section>
   </main>
-  
-  
+
   <footer class="bg-dark text-white text-center py-4">
     <div class="container">
       <div class="row">
@@ -165,7 +163,8 @@
         </div>
       </div>
     </div>
-    <p class="mt-3 footer-credits">&copy; 2024 Kavne Storitve. Vse pravice pridržane.</p>
+    <p class="mt-3 footer-credits">&copy; 2024 Peroša. Vse pravice pridržane.</p>
+    <a href="splosni-pogoji.html" class="footer-a">Pogoji poslovanja</a>
   </footer>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
