--- a/contact.html
+++ b/contact.html
@@ -98,6 +98,8 @@
         </div>
       </div>
     </section>
+
+    
   </main>
 
   <footer class="bg-dark text-white text-center py-4">
@@ -130,7 +132,8 @@
         </div>
       </div>
     </div>
-    <p class="mt-3 footer-credits">&copy; 2024 Kavne Storitve. Vse pravice pridržane.</p>
+    <p class="mt-3 footer-credits">&copy; 2024 Peroša. Vse pravice pridržane.</p>
+    <a href="splosni-pogoji.html" class="footer-a">Pogoji poslovanja</a>
   </footer>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
