--- a/kava.html
+++ b/kava.html
@@ -3,18 +3,73 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Kavna Storitev - Cialde</title>
+  <title>Kavna Storitev - Kava v Zrnu in Mleta Kava</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/styles.css">
-  <link rel="stylesheet" href="css/cialde.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+  <style>
+    .product-display img {
+      max-height: 500px;
+      object-fit: cover;
+      border-radius: 10px;
+      transition: transform 0.3s ease;
+      width: 100%;
+    }
+
+    .product-display img:hover {
+      transform: scale(1.05);
+    }
+
+    .product-display h3 {
+      color: #6f4e37;
+      font-weight: 700;
+      font-size: 2rem;
+      margin-top: 1rem;
+      margin-bottom: 0.5rem;
+    }
+
+    .product-display .product-description {
+      color: #333;
+      margin-top: 0.5rem;
+      font-size: 1.1rem;
+      line-height: 1.6;
+    }
+
+    .product-display .product-price {
+      color: #6f4e37;
+      font-weight: 700;
+      font-size: 1.2rem;
+      margin-top: 1rem;
+      margin-bottom: 0.5rem;
+    }
+
+    .product-display .product-shipping {
+      color: #777;
+      font-size: 1rem;
+      font-style: italic;
+    }
+
+    .product-display {
+      padding: 1.5rem;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      background: #f9f9f9;
+      border-radius: 10px;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      margin-bottom: 2rem;
+    }
+
+    .product-display:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
+    }
+  </style>
 </head>
 <body>
   <div class="sticky-top">
     <header>
-      <p><i class="fas fa-envelope"></i> Vsa povpraševanja se pošljejo na naš e-mail: <a href="mailto:info@perosa.com">info@perosa.com</a></p>
+      <p><i class="fas fa-envelope"></i> Vsa povpraševanja se pošljejo na naš e-mail: <a href="mailto:info@perosa.com" style="color: #6f4e37; font-weight: bold;">info@perosa.com</a></p>
     </header>
-  
+
     <nav class="navbar navbar-expand-lg navbar-dark">
       <div class="container">
         <a class="navbar-brand" href="index.html">Peroša</a>
@@ -44,56 +99,60 @@
 
   <main class="container my-5">
     <section class="hero">
-      <div class="hero-content">
-        <h1>Odkrijte Naše Kavne Cialde</h1>
-        <p>Enostavna in hitra priprava odlične kave</p>
-        <button href="#cialde-products" class="button-hero" id="scroll-to-products">Oglejte si izdelke</a>
+      <div class="hero-content text-center">
+        <h1>Odkrijte Našo Kavo v Zrnu in Mleto Kavo</h1>
+        <p>Uživajte v izjemnem okusu in aromi naših kavnih izdelkov</p>
+        <button href="#coffee-products" class="button-hero" id="scroll-to-products">Oglejte si izdelke</button>
       </div>
     </section>
 
-    <section id="cialde-products" class="my-5">
+    <section id="coffee-products" class="my-5">
       <div class="text-center mb-5">
-        <h2 class="mb-4">Zakaj Izbrati Naše Kavne Cialde?</h2>
-        <div class="row">
-          <div class="col-md-4">
-            <div class="feature-box">
-              <i class="fas fa-coffee fa-3x mb-3 "></i>
-              <h4>Vrhunska Kakovost</h4>
-              <p>Naše cialde so narejene iz skrbno izbranih zrn arabice in robuste, kar zagotavlja izjemen okus in aromo.</p>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="feature-box">
-              <i class="fas fa-clock fa-3x mb-3 "></i>
-              <h4>Hitra Priprava</h4>
-              <p>Cialde omogočajo enostavno in hitro pripravo kave, kar je idealno za hiter in brezskrben začetek dneva.</p>
-            </div>
-          </div>
-        </div>
+        <h2 class="mb-4">Naša Kava v Zrnu</h2>
       </div>
 
-      <!-- Product Display -->
+      <!-- Product Display: Lusso Kava v Zrnu -->
       <div class="row mb-5 align-items-center product-display">
         <div class="col-md-6 order-md-2">
-          <img src="images/cialde/IMG_0170.jpg" class="img-fluid" alt="Cialde Image 1">
+          <img src="images/kava-zrno/Kava-zrno.jpg" class="img-fluid" alt="Lusso Kava v Zrnu">
         </div>
         <div class="col-md-6 order-md-1 d-flex flex-column justify-content-center text-content">
-          <h3 class="product-title">Cialde/podsi ESE Espresso</h3>
-          <p class="product-description">LUSSO caffè pods/cialda v papirnatem filtru, kremasta, polna in uravnotežena kava z okusom sveže pražene kave. Mešanica kave, sestavljena iz kakovostne arabice in robuste, zmešane z veliko pozornostjo, da se zagotovi ravnovesje in stabilnost okusa, zaradi česar je ta kava popolna pijača za ob vsakem odmoru dneva. Okusite lusso kavo za kavne avtomate v podsih/cialdah.</p>
-          <p class="product-price"><strong>150 Podsov/ciald: 27,40 € brez DDV</strong></p>
-          <p class="product-shipping"><em>BREZPLAČNA DOSTAVA nad 450 kom znotraj SI</em></p>
+          <h3 class="product-title">Lusso Kava v Zrnu</h3>
+          <p class="product-description"><span style="color: #6f4e37; font-weight: bold;">Mešanica pražene kave z odličnim telesom in kremastostjo.</span> Mešanica najboljše arabice in robuste za resnično uravnoteženo in aromatično skodelico.</p>
+          <!-- <p class="product-price"><strong>1 kg: 19,99 € brez DDV</strong></p>
+          <p class="product-shipping"><em>BREZPLAČNA DOSTAVA nad 50 € znotraj SI</em></p> -->
         </div>
       </div>
 
+      <!-- Product Display: Lusso Espresso Caffe -->
       <div class="row mb-5 align-items-center product-display">
         <div class="col-md-6">
-          <img src="images/cialde/IMG_0176.jpg" class="img-fluid" alt="Cialde Image 2">
+          <img src="images/kava-zrno/Kava-zrno2.jpg" class="img-fluid" alt="Lusso Espresso Caffe">
         </div>
         <div class="col-md-6 d-flex flex-column justify-content-center text-content">
-          <h3 class="product-title">Cialde/podsi ESE Brezkofeinska/DECAFFE</h3>
-          <p class="product-description">Brezkofeinska kava LUSSO v papirnatem filtru, je kakovostna, kremasta in polnega telesa s popolno uravnoteženim okusom ter jantarne barve. Uživajte v kavi, DECAFFE v baru, doma ali v pisarni.</p>
-          <p class="product-price"><strong>50 Podsov/ciald: 18,27 € brez DDV</strong></p>
-          <p class="product-shipping"><em>BREZPLAČNA DOSTAVA nad 450 kom znotraj SI</em></p>
+          <h3 class="product-title">Lusso Espresso Caffe</h3>
+          <p class="product-description"><span style="color: #6f4e37; font-weight: bold;">Mešanica Lusso Caffè je rezultat kombinacije edinstvenih in neponovljivih dejavnikov.</span> Neindustrijski proizvodni proces, ki omogoča delo na zahtevo, s čimer se zmanjša čas med praženjem, pakiranjem in dostavo. Zagotovljena je svežina in kakovost naše kave.</p>
+          <!-- <p class="product-price"><strong>1 kg: 21,99 € brez DDV</strong></p>
+          <p class="product-shipping"><em>BREZPLAČNA DOSTAVA nad 50 € znotraj SI</em></p> -->
+        </div>
+      </div>
+    </section>
+
+    <section id="ground-coffee-products" class="my-5">
+      <div class="text-center mb-5">
+        <h2 class="mb-4">Naša Mleta Kava</h2>
+      </div>
+
+      <!-- Product Display: Lusso Mleta Kava -->
+      <div class="row mb-5 align-items-center product-display">
+        <div class="col-md-6 order-md-2">
+          <img src="images/kava-zrno/ground-coffee.jpg" class="img-fluid" alt="Lusso Mleta Kava">
+        </div>
+        <div class="col-md-6 order-md-1 d-flex flex-column justify-content-center text-content">
+          <h3 class="product-title">Lusso Mleta Kava</h3>
+          <p class="product-description"><span style="color: #6f4e37; font-weight: bold;">Fina mleta kavna mešanica, pražena do popolnosti.</span> Idealna za pripravo espressa, cappuccina ali katere koli kave po vaši želji.</p>
+          <!--<p class="product-price"><strong>250 g: 5,99 € brez DDV</strong></p>
+           <p class="product-shipping"><em>BREZPLAČNA DOSTAVA nad 50 € znotraj SI</em></p>-->
         </div>
       </div>
     </section>
@@ -141,11 +200,10 @@
   <script>
     document.getElementById('scroll-to-products').addEventListener('click', function(event) {
       event.preventDefault();
-      document.querySelector('#cialde-products').scrollIntoView({
+      document.querySelector('#coffee-products').scrollIntoView({
         behavior: 'smooth'
       });
     });
   </script>
-  
 </body>
 </html>
