--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
     <section class="about-us" id="about-us">
       <div class="container">
-        <h5 class="about-title">Kavni Izdelki</h5>
+        <h5 class="about-title">Kdo Smo</h5>
         <p>Podjetje Peroša je vodilno v zagotavljanju vrhunskih storitev in opreme za kavne aparate in gostinsko industrijo. Naš cilj je vaše zadovoljstvo in uspeh. Z več kot 20 leti izkušenj v industriji smo ponosni na kakovost naših izdelkov in storitev.</p>
         <a href="about.html" class="btn btn-about">Več o nas</a>
         <a href="contact.html" class="btn btn-secondary">Kontaktirajte nas</a>
